gitops/control-center/overlay/lab-dev-th/app/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
